...
            android:text="Tài khoản"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@color/black"
        android:gravity="center_vertical">

...
            <TextView
                android:gravity="right"
                android:id="@+id/invisible_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Xem hoạt động"
                android:textColor="@color/white"
                android:paddingRight="40dip"
                android:visibility="gone"
                android:textSize="18sp" />
        </LinearLayout>

...
