<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="@string/text_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/collection"
        android:enabled="true"
        android:title="@string/text_collection"
        android:icon="@drawable/ic_collection"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:title="@string/text_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:title="@string/text_notifications"
        android:icon="@drawable/ic_bell"
        app:showAsAction="always" />
    <item
        android:id="@+id/user"
        android:enabled="true"
        android:title="@string/text_user"
        android:icon="@drawable/ic_user"
        app:showAsAction="always" />
</menu>