...
            android:text="Đăng nhập với số điện thoại"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/transparentforbtn"/>

        <Button
            android:id="@+id/show_include_login_email"
            android:layout_margin="5dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng nhập với Email"
            android:textAllCaps="false"
            android:textColor="@color/white"
...
