...
                    android:background="@drawable/border_four_corner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:text="TP.HCM"
                    android:id="@+id/chon_city_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_margin="5dip"
                    android:background="@drawable/border_four_corner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/chon_dist_btn"
                    android:text="Chọn quận"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_margin="5dip"
                    android:background="@drawable/border_four_corner"
                    android:layout_width="match_parent"
...
                            android:layout_margin="5dip"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_home" />
                    </FrameLayout>
                    <EditText
                        android:id="@+id/namerest_editText"
                        android:background="@android:color/transparent"
                        android:padding="8dip"
                        android:hint="Tên địa điểm *"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/loaihinhdiadiem_lnr_btn"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <FrameLayout
                        android:layout_width="wrap_content"
...
