...
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/buttonintoolbarright"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:id="@+id/AngiButton"
        android:text="Ăn gì"/>
    <Button
        android:layout_gravity="right"
        android:id="@+id/plusButton"
        android:layout_marginRight="10dip"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/plus_shape_button"/>
</android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
...
