...
    <ExpandableListView
        android:layout_weight="13"
        android:scrollbars="vertical"
        android:background="@color/colorofbackgroundfragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/expandlistviewdiadiem"
        android:dividerHeight="2px"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true">
    </ExpandableListView>

    <Button
...
