...
        android:paddingTop="4dp"
        android:paddingLeft="12dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tao_dia_diem">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_bottom_dialog_fragment_location" />
        <TextView
            android:textColor="@color/black"
...
